--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p class="msg">Congratulations, Winner is O</p>
             <button class="new-btn">New Game</button>
         </div>
-        <div class="container">
+        <div class="container hide-game">
             <div class="game">
                 <button class="box"></button>
                 <button class="box"></button>
@@ -24,9 +24,9 @@
                 <button class="box"></button>
                 <button class="box"></button>
                 <button class="box"></button>
-            </div>
+            </div>    
         </div>
-        <button class="reset-btn">Reset Game</button>
+        <button class="reset-btn hide-btn">Reset Game</button>
     </main>
 
     <script src="script.js"></script>
